samples/_failures_safe/1761410505_e09726_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b0f4089.c: In function ‘compute_geometry’:
./samples/SAFE/__tmp_3b0f4089.c:112:5: error: expected expression at end of input
  112 |     int idx =
      |     ^~~
./samples/SAFE/__tmp_3b0f4089.c:112:5: error: expected declaration or statement at end of input
